--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -1,22 +1,126 @@
-.navbar {
-    display: flex;
-    position: fixed;
-    height: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 20;
 
-    .navbar-brand {
-        position: relative;
-        width: 18rem;
-        height: 9rem;
-        padding: 2.5rem 3.4rem;
-        background-color: $dark;
+.menu {
+    .navbar {
+        width: 100%;
+        display: flex;
+        position: fixed;
+        top: 0;
+        left: 0;
 
 
-        img {
-            max-width: 100%;
+        .navbar-brand {
+            background-color: $dark;
+            position: relative;
+            width: 18rem;
+            height: 9rem;
+            padding: 2.5rem 3.4rem;
+            z-index: 20;
+
+
+            img {
+                max-width: 100%;
+            }
         }
+
+        .burger-menu {
+            background-color: $white;
+            display: inline-block;
+            position: relative;
+            height: 9rem;
+            width: 9rem;
+            z-index: 20;
+
+            &:hover {
+                transition: all .3s cubic-bezier(.19,1,.22,1);
+
+                .bar {
+                    width: 4.5rem;
+                    transition: all .3s cubic-bezier(.19,1,.22,1);
+
+                    &:before {
+                        width: 4.5rem;
+                        transition: all .4s cubic-bezier(.19,1,.22,1);
+                    }
+                }
+            }
+
+            .bar {
+                margin: auto 2.2rem;
+                width: 3rem;
+                transition: all .4s cubic-bezier(.19,1,.22,1);
+
+                &, &::before, &::after {
+                    content: '';
+                    background: $dark;
+                    height: 2px;
+                    position: absolute;
+                    top: 50%;
+                    left: 0;
+                    transition: transform .4s cubic-bezier(.19,1,.22,1);
+                }
+
+                &:before {
+                    width: 4rem;
+                    top: -1rem;
+                    transition: all .4s cubic-bezier(.19,1,.22,1);
+                }
+
+                &:after {
+                    width: 4.5rem;
+                    top: 1rem;
+                }
+
+                &:before, &:after {
+                    transform: rotate(0deg);
+                }
+            }
+
+            &.active {
+                .bar {
+                    background: 0;
+
+                    &:before {
+                        width: 4.5rem;
+                        transform: rotate(45deg);
+                    }
+
+                    &:after {
+                        transform: rotate(-45deg);
+                    }
+
+                    &:before,
+                    &:after {
+                        top: 0;
+                    }
+                }
+            }
+        }
+    }
+
+    .overlay {
+        width: 100%;
+        height: 100%;
+        min-height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        transform: translateX(-100%);
+        transition: all .7s cubic-bezier(.19,1,.22,1);
+        z-index: 19;
+
+        .overlay-backdrop {
+            background-color: $dark;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: -1;
+        }
+
+        &.menu-open {
+            transform: translateX(0%);
+        }
+
     }
 }
