--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -1,21 +1,17 @@
 
 .menu {
     .navbar {
+        @include position(fixed, 0, 0);
         width: 100%;
         display: flex;
-        position: fixed;
-        top: 0;
-        left: 0;
-
 
         .navbar-brand {
             background-color: $dark;
             position: relative;
-            width: 18rem;
-            height: 9rem;
+            width: $navbar-height*2;
+            height: $navbar-height;
             padding: 2.5rem 3.4rem;
             z-index: 20;
-
 
             img {
                 max-width: 100%;
@@ -26,43 +22,41 @@
             background-color: $white;
             display: inline-block;
             position: relative;
-            height: 9rem;
-            width: 9rem;
+            height: $navbar-height;
+            width: $navbar-height;
             z-index: 20;
 
             &:hover {
-                transition: all .3s cubic-bezier(.19,1,.22,1);
+                @include transition();
 
                 .bar {
+                    @include transition();
                     width: 4.5rem;
-                    transition: all .3s cubic-bezier(.19,1,.22,1);
 
                     &:before {
+                        @include transition(all, .4);
                         width: 4.5rem;
-                        transition: all .4s cubic-bezier(.19,1,.22,1);
                     }
                 }
             }
 
             .bar {
+                @include transition(all, .4);
                 margin: auto 2.2rem;
                 width: 3rem;
-                transition: all .4s cubic-bezier(.19,1,.22,1);
 
                 &, &::before, &::after {
                     content: '';
+                    @include position(absolute, 50%, 0);
+                    @include transition(transform, .4);
                     background: $dark;
                     height: 2px;
-                    position: absolute;
-                    top: 50%;
-                    left: 0;
-                    transition: transform .4s cubic-bezier(.19,1,.22,1);
                 }
 
                 &:before {
+                    @include transition(all, .4);
                     width: 4rem;
                     top: -1rem;
-                    transition: all .4s cubic-bezier(.19,1,.22,1);
                 }
 
                 &:after {
@@ -98,29 +92,24 @@
     }
 
     .overlay {
+        @include position(fixed, 0, 0);
+        @include transition(all, .4);
         width: 100%;
         height: 100%;
         min-height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
         transform: translateX(-100%);
-        transition: all .7s cubic-bezier(.19,1,.22,1);
         z-index: 19;
 
         .overlay-backdrop {
+            @include position(absolute, 0, 0);
             background-color: $dark;
             width: 100%;
             height: 100%;
-            position: absolute;
-            left: 0;
-            top: 0;
             z-index: -1;
         }
 
         &.menu-open {
             transform: translateX(0%);
         }
-
     }
 }
