--- a/assets/stylesheets/resources/_variables.scss
+++ b/assets/stylesheets/resources/_variables.scss
@@ -12,6 +12,22 @@ $pangram-extra: 'PanExt';
 $font-family-sans-serif: $pangram-regular, sans-serif;
 $font-family-condensed: $din, sans-serif;
 
+
+$font-size-baseline: 1.6rem; /* 16px */
+$font-size-sm: $font-size-baseline * 0.875; /* 14px */
+
+$h1-font-size: $font-size-baseline * 14.375; /* 230px */
+$h2-font-size: $font-size-baseline * 9.375; /* 150px */
+$h3-font-size: $font-size-baseline * 5.375; /* 86px */
+$h4-font-size: $font-size-baseline * 2.25; /* 36px */
+$h5-font-size: $font-size-baseline * 1.5; /* 24px */
+$h6-font-size: $font-size-sm; /* 18px */
+
+
+//----- NAVBAR -----//
+//
+$navbar-height: 9rem;
+
 /*
 --------------------------------------------------------------------------------
 IMAGES
