--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -1,9 +1,23 @@
 .button {
+  cursor: pointer;
   font-size: 1.8rem;
   letter-spacing: 0.12em;
-  text-transform: uppercase;
   min-width: 16rem;
+  text-transform: uppercase;
   padding: 2rem 1.2rem;
+  @include transition(all, .5);
+
+  &:hover {
+    letter-spacing: 0.16em;
+
+    &.dark {
+      background-color: darken( $dark, 7% );
+    }
+
+    &.light {
+      background-color: darken( $white, 7% );
+    }
+  }
 
   &.dark {
     background-color: $dark;
