--- a/assets/stylesheets/resources/_variables.scss
+++ b/assets/stylesheets/resources/_variables.scss
@@ -10,6 +10,8 @@ $pangram-medium: 'PanMed';
 $pangram-extra: 'PanExt';
 
 $font-family-sans-serif: $pangram-regular, sans-serif;
+$font-family-sans-serif-med: $pangram-medium, sans-serif;
+$font-family-sans-serif-bold: $pangram-extra, sans-serif;
 $font-family-condensed: $din, sans-serif;
 
 
@@ -22,6 +24,7 @@ $h3-font-size: $font-size-baseline * 5.375; /* 86px */
 $h4-font-size: $font-size-baseline * 2.25; /* 36px */
 $h5-font-size: $font-size-baseline * 1.5; /* 24px */
 $h6-font-size: $font-size-sm; /* 18px */
+$btn-font-size: $font-size-baseline * 1.125; /* 18px */
 
 
 //----- NAVBAR -----//
