--- a/assets/stylesheets/resources/_helpers.scss
+++ b/assets/stylesheets/resources/_helpers.scss
@@ -50,10 +50,8 @@ Text and alignments
 Widths
 --------------------------------------------------------------------------------
 */
-.w-25     { width: 25rem; }
-.w-25p    { width: 25%; }
-.maxw-25p { max-width: 25%; }
-.minw-25p { min-width: 25%; }
+.w-25     { width: 25%; }
+.w-50     { width: 50%; }
 
 
 /*
