--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -1,9 +1,11 @@
 
 .menu {
+    
     .navbar {
         @include position(fixed, 0, 0);
-        width: 100%;
         display: flex;
+        width: 100%;
+        z-index: 20;
 
         .navbar-brand {
             background-color: $dark;
