--- a/assets/stylesheets/resources/_fonts.scss
+++ b/assets/stylesheets/resources/_fonts.scss
@@ -2,25 +2,25 @@
 @font-face {
   font-family: 'DIN';
   src: url(../resources/D-DINCondensed-Bold.woff) format('woff'),
-    url(../assets/resources/D-DINCondensed-Bold.woff2) format('woff2'),
-    url(../assets/resources/D-DINCondensed-Bold.otf) format('otf');
+    url(../resources/D-DINCondensed-Bold.woff2) format('woff2'),
+    url(../resources/D-DINCondensed-Bold.otf) format('opentype');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'PanReg';
-  src: url(../assets/resources/Pangram-Regular.otf) format('otf');
+  font-family: 'Pangram-Regular';
+  src: url(../resources/Pangram-Regular.otf) format('opentype');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'PanMed';
-  src: url(../assets/resources/Pangram-Medium.otf) format('otf');
+  font-family: 'Pangram-Medium';
+  src: url(../resources/Pangram-Medium.otf) format('opentype');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'PanExt';
-  src: url(../assets/resources/Pangram-ExtraBold.otf) format('otf');
+  src: url(../resources/Pangram-ExtraBold.otf) format('opentype');
   font-display: swap;
 }
