--- a/assets/stylesheets/resources/_variables.scss
+++ b/assets/stylesheets/resources/_variables.scss
@@ -5,8 +5,8 @@ FONTS
 */
 
 $din: 'DIN';
-$pangram-regular: 'PanReg';
-$pangram-medium: 'PanMed';
+$pangram-regular: 'Pangram-Regular';
+$pangram-medium: 'Pangram-Medium';
 $pangram-extra: 'PanExt';
 
 $font-family-sans-serif: $pangram-regular, sans-serif;
