--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -1,10 +1,12 @@
 .button {
   cursor: pointer;
   font-size: 1.8rem;
+  border-radius: 1px;
   letter-spacing: 0.12em;
   min-width: 16rem;
+  height: 5rem;
   text-transform: uppercase;
-  padding: 2rem 1.6rem;
+  padding: 1rem 1.8rem;
   @include transition(all, .5);
 
   &:hover {
