--- a/assets/stylesheets/blocs/_main.scss
+++ b/assets/stylesheets/blocs/_main.scss
@@ -8,4 +8,14 @@ section {
             color: $white !important;
         }
     }
+
+   .section-title {
+       border-top: 2px solid $gray-5;
+       padding-top: 3.6rem;
+   }
+
+   .section-description {
+       padding-top: 5rem;
+       padding-bottom: 3.6rem;
+   }
 }
