--- a/assets/stylesheets/resources/_wrappers.scss
+++ b/assets/stylesheets/resources/_wrappers.scss
@@ -1,7 +1,19 @@
 .fullscreen-wrapper {
-  padding: 8rem;
+  padding: 6rem 2rem 2rem 2rem;
   height: 100vh;
   width: 100%;
+
+  @include phablet {
+    padding: 6rem 4rem 4rem 4rem;
+  }
+
+  @include tablet {
+    padding: 6rem;
+  }
+
+  @include desktop {
+    padding: 9rem 8rem 8rem 8rem;
+  }
 
   img {
     &.bg-image{
