--- a/assets/stylesheets/blocs/_news.scss
+++ b/assets/stylesheets/blocs/_news.scss
@@ -28,7 +28,7 @@
             z-index: 1;
             margin-left: 4.5rem;
 
-            .card-article__link {
+            .card-article-link {
                 color: inherit;
                 display: block;
                 cursor: pointer;
@@ -37,23 +37,28 @@
                 z-index: 10;
                 user-select: none;
 
-                &:hover .card-article__media img {
+                &:hover .card-article-media img {
                     transform: scale(1);
                 }
 
-                &:active .card-article__media img {
+                &:active .card-article-media img {
                     transform: scale(1);
                 }
 
-                &:hover .card-article__media {
+                &:hover .card-article-media {
                     transform: scale(1.05);
                 }
 
-                &:active .card-article__media {
+                &:active .card-article-media {
                     transform: scale(1.05);
                 }
 
-                .card-article__media, .card-article__media:after, .card-article__media img {
+                &:hover .card-article-content img {
+                    bottom: -0.5rem;
+                    transform: scale(1.3);
+                }
+
+                .card-article-media, .card-article-media:after, .card-article-media img {
                     background: rgba(0,0,0,.4);
                     height: 100%;
                     width: 100%;
@@ -64,7 +69,7 @@
                     z-index: -1;
                 }
 
-                .card-article__media {
+                .card-article-media {
                     position: relative;
                     overflow: hidden;
                     transition: transform 1.5s cubic-bezier(.19,1,.22,1);
@@ -80,7 +85,7 @@
                     }
                 }
 
-                .card-article__content {
+                .card-article-content {
                     display: flex;
                     justify-content: space-between;
                     flex-direction: column;
@@ -93,7 +98,7 @@
                     padding: 4rem;
                     text-transform: uppercase;
 
-                    .card-article__surtitle {
+                    .card-article-surtitle {
                         padding-top: 1.8rem;
 
                         &:before {
@@ -107,13 +112,21 @@
                         }
                     }
 
-                    .card-article__title {
+                    .card-article-title {
                         display: flex;
                         align-items: flex-end;
                         justify-content: space-between;
                         margin-top: auto;
                         padding-right: 1em;
                         position: relative;
+                    }
+
+                    img {
+                        position: absolute;
+                        right: -0.1rem;
+                        bottom: -0.1rem;
+                        opacity: .8;
+                        transition: all 1.5s cubic-bezier(.19,1,.22,1);
                     }
                 }
             }
@@ -125,6 +138,6 @@
     transform: translateZ(0);
 }
 
-.card-article__media {
+.card-article-media {
     z-index: 1;
 }*/
