--- a/assets/stylesheets/blocs/_news.scss
+++ b/assets/stylesheets/blocs/_news.scss
@@ -4,7 +4,7 @@
     overflow: visible;
 
     &.swiper-container {
-        margin-top: -4rem;
+        margin-top: -6rem;
         position: relative;
         list-style: none;
         z-index: 1;
@@ -16,26 +16,41 @@
         height: 100%;
         z-index: 1;
         display: flex;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
         transition-property: transform;
+        overflow-x: auto;
+        overflow-y: hidden;
+
+        @include tablet {
+            overflow: none;
+        }
     }
 
     .swiper-slide {
-        height: 53rem;
+        height: 40rem;
+        min-width: 30rem;
         transition-delay: 0.02s;
+
+        @include tablet {
+            height: 52rem;
+            width: 32%;
+            min-width: 30rem;
+        }
 
         .card-article {
             height: 100%;
             z-index: 1;
-            margin-left: 4.5rem;
+            margin-left: 6rem;
 
             .card-article-link {
+                cursor: pointer;
                 color: inherit;
                 display: block;
-                cursor: pointer;
                 height: 100%;
                 position: relative;
-                z-index: 10;
                 user-select: none;
+                z-index: 10;
 
                 &:hover .card-article-media img {
                     transform: scale(1);
@@ -70,9 +85,9 @@
                 }
 
                 .card-article-media {
+                    @include transition(transform, 1.5);
                     position: relative;
                     overflow: hidden;
-                    transition: transform 1.5s cubic-bezier(.19,1,.22,1);
 
                     &:after {
                         content: "";
@@ -80,8 +95,8 @@
                     }
 
                     img {
+                        @include transition(transform, .7);
                         transform: scale(1.2);
-                        transition: transform .7s cubic-bezier(.19,1,.22,1);
                     }
                 }
 
@@ -122,11 +137,11 @@
                     }
 
                     img {
+                        @include transition(all, 1.5);
                         position: absolute;
                         right: -0.1rem;
                         bottom: -0.1rem;
                         opacity: .8;
-                        transition: all 1.5s cubic-bezier(.19,1,.22,1);
                     }
                 }
             }
