--- a/assets/stylesheets/pages/_beers.scss
+++ b/assets/stylesheets/pages/_beers.scss
@@ -26,9 +26,21 @@
 
     .obj {
         display: inline-block;
-        width: 20.6vw;
-        margin-left: 6.5vw;
-        margin-right: 6.5vw;
+        width: 70vw;
+        margin-left: 15vw;
+        margin-right: 15vw;
+
+        @include tablet {
+            width: 50vw;
+            margin-left: 10vw;
+            margin-right: 10vw;
+        }
+
+        @include desktop {
+            width: 20.6vw;
+            margin-left: 6.5vw;
+            margin-right: 6.5vw;
+        }
     }
 
     /*
@@ -39,24 +51,30 @@
         margin-right: 5vw;
     }*/
 
-    @media only screen and (max-width: 600px) {
-        .obj {
-            width: 70vw !important;
-            margin-left: 10vw;
-            margin-right: 10vw;
-        }
-    }
-
     .cover {
         position: absolute;
         width: 100%;
-        height: 30vw;
+        height: 90vw;
         top: 50%;
-        transform: translateY(-50%);
-        backface-visibility: hidden;
+        transform: translateY(-40%);
+        backface-visibility: hidden;       
+
+        @include tablet {
+            height: 70vw;
+            transform: translateY(-50%);
+        }
+
+        @include desktop {
+            height: 30vw;
+            transform: translateY(-50%);
+        }
 
         &:hover .picture::after {
-            height: 40rem;
+            height: 35rem;
+
+            @include phablet {
+                height: 40rem;
+            }
         }
 
         &:hover .picture::before {
@@ -70,7 +88,12 @@
         }
 
         &:hover .title {
-            transform: translate(-50%, -8rem);
+            transform: translate(-50%, -10rem);
+            color: #FACA78;
+
+            @include phablet {
+                transform: translate(-50%, -8rem);
+            }
         }
 
         .label {
@@ -115,19 +138,7 @@
         }
     }
 
-    @media only screen and (max-width: 600px) {
-        .cover {
-            position: absolute;
-            width: 100%;
-            height: 80vw;
-            top: 50%;
-            transform: translateY(-50%);
-            backface-visibility: hidden;
-        }
-    }
-
     .picture {
-        // background-color: #212121;
         position: absolute;
         left: 50%;
         height: 100%;
@@ -138,7 +149,7 @@
 
         &:after {
             content:'';
-            @include transition(all, 1.4);
+            @include transition(all, 1.2);
             background-color: #FACA78;
             position: absolute;
             left: 0;
@@ -150,7 +161,7 @@
 
         &:before {
             content: '';
-            @include transition(all, 1.4);
+            @include transition(all, 1.2);
             background: $dark;
             filter: blur(13px);
             position: absolute;
@@ -184,6 +195,8 @@
             transform: translateX(-50%);
             text-align: center;
             z-index: 2;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
         }
     }
 }
