--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -112,5 +112,17 @@
         &.menu-open {
             transform: translateX(0%);
         }
+
+        .menu-panel {
+            padding: 16rem 8rem 10rem 18rem;
+            
+            .menu-link {
+                @extend h3;
+                color: $white;
+                display: block;
+                padding: 1rem;
+                text-decoration: none;
+            }
+        }
     }
 }
