--- a/assets/stylesheets/atoms/_base.scss
+++ b/assets/stylesheets/atoms/_base.scss
@@ -24,6 +24,10 @@ h1, h2, h3, h4, button, label, a {
   font-family: $font-family-condensed;
 }
 
+h1, h2, h3, h6, label, button {
+  text-transform: uppercase;
+}
+
 h1 {
   font-size: $h1-font-size;
   letter-spacing: 0.06em;
@@ -34,14 +38,12 @@ h2 {
   font-size: $h2-font-size;
   letter-spacing: 0.04em;
   line-height: 90%;
-  text-transform: uppercase;
 }
 
 h3 {
   font-size: $h3-font-size;
   letter-spacing: 0.02em;
   line-height: 100%;
-  text-transform: uppercase;
 }
 
 h4 {
@@ -62,7 +64,6 @@ h6 {
   font-size: $h6-font-size;
   letter-spacing: 0.14em;
   line-height: 100%;
-  text-transform: uppercase;
 }
 
 span {
@@ -80,7 +81,6 @@ label, .label {
   font-size: $font-size-sm;
   line-height: 100%;
   letter-spacing: 0.2em;
-  text-transform: uppercase;
 }
 
 b {
