--- a/assets/stylesheets/resources/_wrappers.scss
+++ b/assets/stylesheets/resources/_wrappers.scss
@@ -24,5 +24,10 @@
       object-fit: cover;
       z-index: -1;
     }
+
+    &.bg-texture {
+      @extend .bg-image;
+      z-index: 1;
+    }
   }
 }
