--- a/assets/stylesheets/resources/_variables.scss
+++ b/assets/stylesheets/resources/_variables.scss
@@ -46,6 +46,8 @@ $bg_list: fog "../images/bg_fog",
 VARIABLES
 --------------------------------------------------------------------------------
 */
+$gray-border: 1px solid $gray-4;
+
 $radius: .4rem;
 
 $size_xs: .5rem;
