--- a/assets/stylesheets/pages/_single-beer.scss
+++ b/assets/stylesheets/pages/_single-beer.scss
@@ -1,22 +1,144 @@
 .pilsener-wrapper {
     background: linear-gradient(153.33deg, rgba(242, 216, 171, 0.6) 21.01%, rgba(230, 195, 136, 0.6) 87.05%);
     position: relative;
+    margin-top: -100vh;
 
     h1 {
         text-align: center;
         opacity: .04;
     }
+}
 
-    .beer-bottle {
-        position: absolute;
-        height: 80vh;
-        left: 50%;
-        bottom: -1rem;
-        transform: translateX(-50%);
+.two-section-sticky {
+    position: relative;
+}
 
-        img {
-            height: 100%;
-            object-fit: contain;
+.beer-bottle {
+    width: min-content;
+    height: 100vh;
+    transform-origin: center center; 
+    transform: translateX(-50%);
+    position: sticky;
+    top: 20vh;
+    left: 50%;
+    z-index: 2;
+
+    img {
+        height: 85%;
+        padding-top: 8rem;
+        object-fit: contain;
+
+        &:before {
+            content: '';
+            background: $dark;
+            filter: blur(13px);
+            position: absolute;
+            width: 17rem;
+            height: 1rem;
+            left: 50%;
+            transform: translateX(-50%);
+            opacity: 1;
+        }
+    }
+}
+
+.beer-info-wrapper {
+    padding: 13rem 8rem 3rem 8rem;
+
+    .b-all {
+        border-bottom: $gray-border;
+        border-top: $gray-border;
+    }
+
+    .beer {
+        &-row {
+            border-top: $gray-border;
+            padding-top: 4rem;
+        }
+
+        &-name {
+            color: $pilsener-color;
+        }
+
+        &-ingredients {
+            padding-top: 4rem;
+            padding-bottom: 2rem;
+        }
+
+        &-ingredient-container {
+            p {
+                padding: 1.6rem 0;
+                position: relative;
+
+                img {
+                    position: absolute;
+                    top: .5rem;
+                    left: -1.5rem;
+                }
+            }
+        }
+    }
+
+    .form-group {
+        margin-bottom: 6rem;
+    }
+
+    .beer-specs-container {
+        .specs-card {
+            padding: 3rem;
+            border-left: $gray-border;
+
+            &:first-child {
+                border-left: none;
+            }
+
+            h6 {
+                color: $gray-3;
+                margin-bottom: 1rem;
+            }
+
+            h4 {
+               color: $pilsener-color;
+            }
+
+            .beer-color {
+                width: 1.4rem;
+                height: 1.4rem;
+                margin-right: 1.4rem;
+                border-radius: 50%;
+
+                &:nth-child(1) {
+                    background-color: #FDC802;
+                }
+                &:nth-child(2) {
+                    background-color: #E9A302;
+                }
+                &:nth-child(3) {
+                    background-color: #E28300;
+                }
+                &:nth-child(4) {
+                    background-color: #D06600;
+                }
+                &:nth-child(5) {
+                    background-color: #A33616;
+                }
+                &:nth-child(6) {
+                    background-color: #882310;
+                }
+                &:nth-child(7) {
+                    background-color: #6B1112;
+                }
+                &:nth-child(8) {
+                    background-color: #4C0B0A;
+                }
+                &:nth-child(9) {
+                    background-color: #2C0708;
+                }
+
+                &.selected {
+                    transform: scale(1.6);
+                }
+            }
         }
     }
 }
