--- a/assets/stylesheets/resources/_helpers.scss
+++ b/assets/stylesheets/resources/_helpers.scss
@@ -44,6 +44,11 @@ Text and alignments
 .no-margin   { margin: 0 !important; }
 .no-padding  { padding: 0 !important; }
 
+.fullscreen {
+  width: 100%;
+  height: 100vh;
+}
+
 
 /*
 --------------------------------------------------------------------------------
