--- a/assets/stylesheets/pages/_single-beer.scss
+++ b/assets/stylesheets/pages/_single-beer.scss
@@ -42,6 +42,11 @@
     }
 }
 
+.b-all {
+    border-bottom: $gray-border;
+    border-top: $gray-border;
+}
+
 .beer-info-wrapper {
     padding: 13rem 8rem 3rem 8rem;
 
@@ -53,7 +58,7 @@
     .beer {
         &-row {
             border-top: $gray-border;
-            padding-top: 4rem;
+            padding-top: 3rem;
         }
 
         &-name {
@@ -82,63 +87,54 @@
     .form-group {
         margin-bottom: 6rem;
     }
+}
 
-    .beer-specs-container {
-        .specs-card {
-            padding: 3rem;
-            border-left: $gray-border;
+.beer-recomendation {
+    &-wrapper {
+        height: 100vh;
+    }
 
-            &:first-child {
-                border-left: none;
-            }
+    &-image-link {
+        height: 100%;
 
-            h6 {
-                color: $gray-3;
-                margin-bottom: 1rem;
-            }
-
-            h4 {
-               color: $pilsener-color;
-            }
-
-            .beer-color {
-                width: 1.4rem;
-                height: 1.4rem;
-                margin-right: 1.4rem;
-                border-radius: 50%;
-
-                &:nth-child(1) {
-                    background-color: #FDC802;
-                }
-                &:nth-child(2) {
-                    background-color: #E9A302;
-                }
-                &:nth-child(3) {
-                    background-color: #E28300;
-                }
-                &:nth-child(4) {
-                    background-color: #D06600;
-                }
-                &:nth-child(5) {
-                    background-color: #A33616;
-                }
-                &:nth-child(6) {
-                    background-color: #882310;
-                }
-                &:nth-child(7) {
-                    background-color: #6B1112;
-                }
-                &:nth-child(8) {
-                    background-color: #4C0B0A;
-                }
-                &:nth-child(9) {
-                    background-color: #2C0708;
-                }
-
-                &.selected {
-                    transform: scale(1.6);
-                }
-            }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
+    }
+
+    &-card-container {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    &-card {
+        background: linear-gradient(157.85deg, #2A2A2A 22.3%, #131313 87.6%);
+        padding: 7rem 8rem 8rem;
+        height: 78vh;
+
+        .row {
+            margin: 0;
+        }
+    }
+
+    &-title, &-subtitle {
+        color: $white;
+    }
+
+    &-title {
+        opacity: .05;
+    }
+
+    &-subtitle {
+        margin: -3rem 0 3rem 6rem;
+    }
+
+    &-description {
+        color: $gray-3;
+        padding-bottom: 2rem;
     }
 }
