--- a/assets/stylesheets/resources/_variables.scss
+++ b/assets/stylesheets/resources/_variables.scss
@@ -47,11 +47,4 @@ VARIABLES
 --------------------------------------------------------------------------------
 */
 $gray-border: 1px solid $gray-4;
-
-$radius: .4rem;
-
-$size_xs: .5rem;
-$size_s: 1rem;
-$size_m: 2rem;
-$size_l: 5rem;
-$size_xl: 10rem;
+$light-border: 1px solid $gray-2;
