--- a/assets/stylesheets/pages/_single-beer.scss
+++ b/assets/stylesheets/pages/_single-beer.scss
@@ -18,26 +18,34 @@
     height: 100vh;
     transform-origin: center center; 
     transform: translateX(-50%);
-    position: sticky;
+    position: relative;
     top: 20vh;
     left: 50%;
     z-index: 2;
+
+    @include tablet {
+        position: sticky;
+    }
 
     img {
         height: 85%;
         padding-top: 8rem;
         object-fit: contain;
+    }
 
-        &:before {
-            content: '';
-            background: $dark;
-            filter: blur(13px);
-            position: absolute;
-            width: 17rem;
-            height: 1rem;
-            left: 50%;
-            transform: translateX(-50%);
-            opacity: 1;
+    &-img-lg {
+        display: none;
+
+        @include tablet {
+            display: block;
+        }
+    }
+
+    &-img-sm {
+        display: block;
+
+        @include tablet {
+            display: none;
         }
     }
 }
@@ -48,21 +56,19 @@
 }
 
 .beer-info-wrapper {
-    padding: 13rem 8rem 3rem 8rem;
-
-    .b-all {
-        border-bottom: $gray-border;
-        border-top: $gray-border;
-    }
-
     .beer {
         &-row {
             border-top: $gray-border;
-            padding-top: 3rem;
+            padding-top: 2rem;
+
+            @include phablet {
+                padding-top: 3rem;
+            }
         }
 
         &-name {
             color: $pilsener-color;
+            margin-bottom: 3rem;
         }
 
         &-ingredients {
@@ -71,6 +77,12 @@
         }
 
         &-ingredient-container {
+            margin-left: 1.4rem;
+
+            @include phablet {
+                margin-left: 0;
+            }
+
             p {
                 padding: 1.6rem 0;
                 position: relative;
@@ -92,11 +104,19 @@
 
 .beer-recomendation {
     &-wrapper {
-        height: 100vh;
+        height: 100%;
+
+        @include tablet {
+            height: 100vh;
+        }
     }
 
     &-image-link {
-        height: 100%;
+        height: 40vh;
+
+        @include tablet {
+            height: 100%;
+        }
 
         img {
             width: 100%;
@@ -106,16 +126,27 @@
     }
 
     &-card-container {
-        position: absolute;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
+        @include tablet {
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+        }
     }
 
     &-card {
         background: linear-gradient(157.85deg, #2A2A2A 22.3%, #131313 87.6%);
-        padding: 7rem 8rem 8rem;
-        height: 78vh;
+        padding: 3rem;
+        height: auto;
+
+        @include tablet {
+            height: 78vh;
+            padding: 4rem 5rem 5rem;
+        }
+
+        @include desktop {
+            padding: 7rem 8rem 8rem;
+        }
 
         .row {
             margin: 0;
@@ -136,6 +167,6 @@
 
     &-description {
         color: $gray-3;
-        padding-bottom: 2rem;
+        padding-bottom: 4rem;
     }
 }
