--- a/assets/stylesheets/resources/_wrappers.scss
+++ b/assets/stylesheets/resources/_wrappers.scss
@@ -31,3 +31,18 @@
     }
   }
 }
+
+.beer-info-wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 8rem 2rem 10rem 2rem;
+
+  @include phablet {
+    padding: 8rem 2rem 10rem 2rem;
+  }
+
+  @include tablet {
+    padding: 13rem 8rem 3rem 8rem;
+    height: 100vh;
+  }
+}
