--- a/assets/stylesheets/resources/grid/_grid.scss
+++ b/assets/stylesheets/resources/grid/_grid.scss
@@ -1,24 +1,6 @@
 // Container widths
 //
 // Set the container width, and override it for fixed navbars in media queries.
-$enable-grid-classes: true;
-$grid-columns: 12;
-$grid-gutter-width: 30px;
-
-$container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px
-);
-
-$grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px
-);
 
 @mixin _assert-ascending($map, $map-name) {
   $prev-key: null;
@@ -36,8 +18,40 @@ $grid-breakpoints: (
   }
 }
 
+@mixin _assert-starts-at-zero($map, $map-name: "$grid-breakpoints") {
+  $values: map-values($map);
+  $first-value: nth($values, 1);
+  @if $first-value != 0 {
+    @warn "First breakpoint in #{$map-name} must start at 0, but starts at #{$first-value}.";
+  }
+}
+
+$enable-grid-classes: true;
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
+
+@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
+@include _assert-starts-at-zero($grid-breakpoints, "$grid-breakpoints");
+
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+) !default;
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
+
+$grid-columns: 12;
+$grid-gutter-width: 30px;
+
 
 @if $enable-grid-classes {
   .container {
