--- a/assets/stylesheets/blocs/_news.scss
+++ b/assets/stylesheets/blocs/_news.scss
@@ -136,7 +136,7 @@
                         position: relative;
                     }
 
-                    img {
+                    .card-article-arrow {
                         @include transition(all, 1.5);
                         position: absolute;
                         right: -0.1rem;
