--- a/assets/stylesheets/pages/_single-beer.scss
+++ b/assets/stylesheets/pages/_single-beer.scss
@@ -118,11 +118,34 @@
             height: 100%;
         }
 
-        img {
+        .beer-recomendation-bg {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
+    }
+
+    &-link {
+        position: absolute;
+        right: 1.5rem;
+        bottom: -0.1rem;
+        opacity: .6;
+        color: $white;
+
+        &:hover {
+            opacity: .8;
+        }
+
+        &:hover .beer-recomendation-arrow {
+            bottom: -0.5rem;
+            transform: scale(1.2);
+        }
+    }
+
+    &-arrow {
+        @include transition(all, 1.5);
+        width: 7rem;
+        height: 7rem;
     }
 
     &-card-container {
@@ -162,7 +185,11 @@
     }
 
     &-subtitle {
-        margin: -3rem 0 3rem 6rem;
+        margin: -2rem 0 3rem 3rem;
+
+        @include tablet {
+            margin: -3rem 0 3rem 6rem;
+        }
     }
 
     &-description {
