--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -12,6 +12,13 @@
     100% { opacity: 1; }
 }
 
+
+/*
+--------------------------------------------------------------------------------
+Praxis Logo & Burguer Menu
+--------------------------------------------------------------------------------
+*/
+
 .menu {
     .navbar {
         @include position(fixed, 0, 0);
@@ -105,21 +112,25 @@
         }
     }
 
+/*
+--------------------------------------------------------------------------------
+Navigation Modal
+--------------------------------------------------------------------------------
+*/
+
     .overlay {
         @include position(fixed, 0, 0);
         @include transition(all, .7);
+        background-color: $black;
         width: 100%;
         height: 100%;
         min-height: 100vh;
-        transform: translateX(-100%);
+        transform: translateX(-110%);
         z-index: 19;
+        overflow: auto;
 
-        .overlay-backdrop {
-            @include position(absolute, 0, 0);
-            background-color: $black;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
+        @include desktop {
+            overflow: hidden;
         }
 
         &.menu-open {
@@ -129,7 +140,7 @@
         .menu-panel {
             padding: 10rem 2rem 2rem;
 
-            @include tablet {
+            @include desktop {
                 padding: 12rem 8rem 10rem 18rem;
             }
 
@@ -137,7 +148,7 @@
                 @include transition(all, .7);
                 width: 100%;
 
-                @include tablet {
+                @include desktop {
                     width: 60%;
                 }
 
@@ -156,7 +167,7 @@
                         > ul {
                             position: relative;
 
-                            @include tablet {
+                            @include desktop {
                                 position: absolute;
                                 top: 20%;
                                 left: 100%;
@@ -203,6 +214,37 @@
                                 margin-left: -2rem;
                             }
                         }
+
+                        label {
+                            position: absolute;
+                            right: 0;
+                            top: 3.5rem;
+
+                            img {
+                                width: 4rem;
+                                height: 4rem;
+                            }
+                        }
+                    }
+
+                    &.specials {
+                        position: relative;
+                        padding-bottom: .8rem;
+
+                        &:before {
+                            content: '';
+                            position: absolute;
+                            left: 0;
+                            top: 30%;
+                            width: 22rem;
+                            height: 2px;
+                            background-color: $gray-2;
+                        }
+
+                        label {
+                            margin-left: 24rem;
+                            color: $white;
+                        }
                     }
 
                     .menu-dropdown, input[type="checkbox"] {
@@ -235,15 +277,13 @@
             }
 
             @media screen and (max-width: 992px) {
-            // hide navigation and right icons
                 input[type="checkbox"]:checked + ul {
                     @include show;
                 }
             }
 
             @media screen and (min-width: 993px) {
-            // hide show navigation button and checkboxes
-                label, input[type="checkbox"] {
+                .beers-link label, input[type="checkbox"] {
                     @include hide;
                 }
                 
@@ -255,6 +295,31 @@
                             @include show;
                             animation: opacity .7s ease-out;
                         }
+                    }
+                }
+            }
+
+/*
+--------------------------------------------------------------------------------
+Social Media
+--------------------------------------------------------------------------------
+*/
+
+            .media-links-container {
+                position: relative;
+
+                @include desktop {
+                    position: absolute;
+                    right: 8rem;
+                    top: 18rem;
+                    flex-direction: column;
+                }
+
+                .media-link {
+                    margin: 6rem 4rem 4rem 0;
+
+                    @include desktop {
+                        margin: 0 0 4rem 0;
                     }
                 }
             }
