--- a/assets/stylesheets/atoms/_base.scss
+++ b/assets/stylesheets/atoms/_base.scss
@@ -73,6 +73,10 @@ a {
   @include transition();
   cursor: pointer;
   text-decoration: none;
+
+  &:active {
+    color: $white;
+  }
 }
 
 label, .label {
