--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -323,6 +323,31 @@ Social Media
                     }
                 }
             }
+
+/*
+--------------------------------------------------------------------------------
+Language
+--------------------------------------------------------------------------------
+*/
+
+            .lang-links-container {
+                position: absolute;
+                right: 2rem;
+                top: 4rem;
+
+                @include desktop {
+                    right: 6rem;
+                }
+
+                .lang-link {
+                    color: $gray-2;
+                    padding: 1rem 1rem;
+
+                    &.selected {
+                        color: $white;
+                    }
+                }
+            }
         }
     }
 }
