--- a/assets/stylesheets/resources/_helpers.scss
+++ b/assets/stylesheets/resources/_helpers.scss
@@ -56,7 +56,12 @@ Widths
 --------------------------------------------------------------------------------
 */
 .w-25     { width: 25%; }
-.w-50     { width: 50%; }
+.w-50     { 
+  width: 100%; 
+  @include tablet {
+    width: 50%; 
+  }
+}
 
 
 /*
