--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -218,11 +218,11 @@ Navigation Modal
                         label {
                             position: absolute;
                             right: 0;
-                            top: 3.5rem;
+                            top: 2.5rem;
 
                             img {
-                                width: 4rem;
-                                height: 4rem;
+                                width: 3rem;
+                                height: 3rem;
                             }
                         }
                     }
@@ -316,7 +316,7 @@ Social Media
                 }
 
                 .media-link {
-                    margin: 6rem 4rem 4rem 0;
+                    margin: 6rem 4rem 0 0;
 
                     @include desktop {
                         margin: 0 0 4rem 0;
