clean up some code

--- a/assets/stylesheets/atoms/_base.scss
+++ b/assets/stylesheets/atoms/_base.scss
@@ -115,10 +115,14 @@ a {
 }
 
 label, .label {
-  font-family:$font-family-condensed;
-  font-size: $font-size-sm;
+  font-family: $font-family-condensed;
+  font-size: $h6-font-size-sm;
   line-height: 100%;
   letter-spacing: 0.2em;
+
+  @include tablet {
+    font-size: $font-size-sm;
+  }
 }
 
 b {
