--- a/assets/stylesheets/resources/_variables.scss
+++ b/assets/stylesheets/resources/_variables.scss
@@ -16,14 +16,14 @@ $font-family-condensed: $din, sans-serif;
 
 
 $font-size-baseline: 1.6rem; /* 16px */
-$font-size-sm: $font-size-baseline * 0.75; /* 12px */
+$font-size-sm: $font-size-baseline * 0.85; /* 14px */
 
 $h1-font-size-sm: $font-size-baseline * 6.875; /* 110px */
 $h2-font-size-sm: $font-size-baseline * 5.125; /* 82px */
 $h3-font-size-sm: $font-size-baseline * 3.5; /* 56px */
 $h4-font-size-sm: $font-size-baseline * 1.625; /* 26px */
 $h5-font-size-sm: $font-size-baseline * 1.125; /* 18px */
-$h6-font-size-sm: $font-size-sm; /* 12px */
+$h6-font-size-sm: $font-size-baseline * 0.75; /* 12px */
 $btn-font-size-sm: $font-size-baseline; /* 16px */
 
 
@@ -37,17 +37,8 @@ $btn-font-size: $font-size-baseline * 1.125; /* 18px */
 
 
 //----- NAVBAR -----//
-//
-$navbar-height: 9rem;
 
-/*
---------------------------------------------------------------------------------
-IMAGES
---------------------------------------------------------------------------------
-*/
-$bg_list: fog "../images/bg_fog",
-          lake "../images/bg_lake",
-          class "../images/bg_class";
+$navbar-height: 9rem;
 
 
 /*
