--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -18,10 +18,13 @@
 'atoms/button',
 'atoms/button_safari',
 'atoms/scrollbar',
+'atoms/input',
 
 'blocs/main',
 'blocs/navbar',
+'blocs/footer',
 'blocs/news',
+'blocs/media',
 'blocs/beer-specs-card',
 
 'pages/beers',
