--- a/assets/stylesheets/blocs/_media.scss
+++ b/assets/stylesheets/blocs/_media.scss
@@ -23,7 +23,11 @@
         margin-top: auto;
 
         .media-link {
-            margin-right: 1.8rem;
+            margin-right: 3rem;
+
+            @include tablet {
+                margin-right: 1.8rem;
+            }
         }
     }
 }
