--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -1,10 +1,14 @@
 .button {
   @include transition(all, .5);
   border-radius: 1px;
-  min-width: 16rem;
+  min-width: 14rem;
   height: 5rem;
   padding: 1.4rem 1.8rem;
   text-transform: uppercase;
+
+  @include tablet {
+    min-width: 16rem;
+  }
 
   &.button-icon {
     display: flex;
