--- a/assets/stylesheets/resources/grid/mixins/_grid-framework.scss
+++ b/assets/stylesheets/resources/grid/mixins/_grid-framework.scss
@@ -4,6 +4,7 @@
 // any value of `$grid-columns`.
 
 @mixin make-grid-columns($columns: $grid-columns, $gutter: $grid-gutter-width, $breakpoints: $grid-breakpoints) {
+  // Common properties for all breakpoints
   %grid-column {
     position: relative;
     width: 100%;
@@ -13,6 +14,8 @@
 
   @each $breakpoint in map-keys($breakpoints) {
     $infix: breakpoint-infix($breakpoint, $breakpoints);
+
+    // Allow columns to stretch full width below their breakpoints
     @for $i from 1 through $columns {
       .col#{$infix}-#{$i} {
         @extend %grid-column;
@@ -24,15 +27,21 @@
     }
 
     @include media-breakpoint-up($breakpoint, $breakpoints) {
+      // Provide basic `.col-{bp}` classes for equal-width flexbox columns
       .col#{$infix} {
         flex-basis: 0;
         flex-grow: 1;
         max-width: 100%;
       }
+
+      @for $i from 1 through $grid-row-columns {
+        .row-cols#{$infix}-#{$i} {
+          @include row-cols($i);
+        }
+      }
+
       .col#{$infix}-auto {
-        flex: 0 0 auto;
-        width: auto;
-        max-width: 100%;
+        @include make-col-auto();
       }
 
       @for $i from 1 through $columns {
@@ -49,6 +58,7 @@
         .order#{$infix}-#{$i} { order: $i; }
       }
 
+      // `$columns - 1` because offsetting by the width of an entire row isn't possible
       @for $i from 0 through ($columns - 1) {
         @if not ($infix == "" and $i == 0) { // Avoid emitting useless .offset-0
           .offset#{$infix}-#{$i} {
