--- a/assets/stylesheets/resources/grid/_display.scss
+++ b/assets/stylesheets/resources/grid/_display.scss
@@ -2,8 +2,7 @@
 
 //
 // Utilities for common `display` values
-
-$displays: none, inline, inline-block, block, table, table-row, table-cell, flex, inline-flex;
+//
 
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
@@ -12,5 +11,16 @@ $displays: none, inline, inline-block, block, table, table-row, table-cell, flex
     @each $value in $displays {
       .d#{$infix}-#{$value} { display: $value !important; }
     }
+  }
+}
+
+
+//
+// Utilities for toggling `display` in print
+//
+
+@media print {
+  @each $value in $displays {
+    .d-print-#{$value} { display: $value !important; }
   }
 }
